# frontend_ar

./: README.md
cap/: AppDelegate.swift  Constants.swift  Info.plist  Plane.swift  QRAnchor.swift  QRAnchorDetector.swift  QRPlane.swift  RemoteView.swift  RemoteViewController.swift  Throttler.swift  Utilities.swift  ViewController.swift  ViewControllerNoAR.swift
cap.xcodeproj/: project.pbxproj
cap.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
cap.xcodeproj/project.xcworkspace/xcuserdata/jaybooth.xcuserdatad/: UserInterfaceState.xcuserstate
cap.xcodeproj/xcshareddata/xcschemes/: cap.xcscheme
cap.xcodeproj/xcuserdata/Andrew.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cap.xcodeproj/xcuserdata/Andrew.xcuserdatad/xcschemes/: xcschememanagement.plist
cap.xcodeproj/xcuserdata/jaybooth.xcuserdatad/xcschemes/: xcschememanagement.plist
cap/AR/: Plane.swift  QRAnchor.swift  QRAnchorDetector.swift  QRPlane.swift
cap/Assets.scnassets/: wireframe_shader.metal
cap/Assets.xcassets/QRColor.colorset/: Contents.json
cap/Assets.xcassets/planeColor.colorset/: Contents.json
cap/Assets.xcassets/red_smoke.imageset/: Contents.json
cap/Base.lproj/: Main.storyboard
cap/Controllers/: PreviewViewController.swift  RemoteViewController.swift  ViewController.swift  ViewControllerAR.swift  ViewControllerNoAR.swift
cap/LifiDetector/: LifiDetector.swift  OpenCVWrapper.h  OpenCVWrapper.mm
cap/LifiDetector/OpenCVDetector/: .gitignore  CMakeLists.txt  ColorDetector.cpp  CvHelper.cpp  DetectorConstants.h  HistoryInterpreter.cpp  HistoryInterpreter.hpp  TargetDetector.cpp  TargetDetector.hpp  TargetHistory.cpp  TargetHistory.hpp
cap/LifiDetector/OpenCVDetector/cmake/: gtest.cmake  opencv.cmake
cap/LifiDetector/OpenCVDetector/include/: ColorDetector.hpp  CvHelper.hpp  DetectorConstants.h  HistoryInterpreter.hpp  TargetDetector.hpp  TargetHistory.hpp
cap/LifiDetector/OpenCVDetector/src/: CMakeLists.txt  ColorDetector.cpp  CvHelper.cpp  HistoryInterpreter.cpp  TargetDetector.cpp  TargetHistory.cpp  main.cpp
cap/LifiDetector/OpenCVDetector/test/: CMakeLists.txt  color_detector_test.cpp  history_interpreter_test.cpp  target_detector_test.cpp  target_history_test.cpp
cap/Model/: ActionDataModel.swift  ActionManager.swift  ActionUtilities.swift  DummyData.swift  IoTDataManager.swift  IoTDataModel.swift
cap/RemoteViews/: AbstractRemoteView.swift  ClimateView.swift  ColorController.swift  DebugView.swift  IoTDataModel.swift  LightView.swift  RemoteView.swift  RemoteViewController.swift
cap/Views/: DebugView.swift  PreviewView.swift
cap/Views/RemoteViews/: ClimateView.swift  LightView.swift  LockView.swift  MusicView.swift  RemoteView.swift
capTests/: ActionManagerTests.swift  IotDataModelTests.swift  capTests.swift
capUITests/: capUITests.swift
notes/: lifi.md
